# personal-gym-tracker

./: .gitignore  Makefile  Pipfile  README.md  asdf.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: trivy.yaml
dbt/personal_gym_tracker/: .user.yml  MARTS_GUIDE.md  README.md  dbt_project.yml  profiles.yml
dbt/personal_gym_tracker/models/: README.md
dbt/personal_gym_tracker/tests/: assert_exercise_frequency_has_data.sql  assert_exercise_frequency_positive_counts.sql  assert_personal_records_has_data.sql  assert_personal_records_pr_greater_than_zero.sql  assert_training_patterns_has_data.sql  assert_training_patterns_valid_analysis_types.sql
discord_bot/: bot_commands.py
environments/: root.hcl  terragrunt.hcl
environments/dev/: .terraform.lock.hcl  terragrunt.hcl
environments/prod/: .terraform.lock.hcl  terragrunt.hcl
local_postgres/: create_postgres_tables.py  docker-compose.yml  postgres-setup.sh  test_commit.py  test_sql_query.sql
local_postgres/postgres/: boto_methods.py  create_tables.py  download_workout_files.py  insert_exercises.py  insert_sets.py  insert_users.py  insert_workouts.py
local_postgres/superset/: superset_config.py
modules/: .terraform.lock.hcl  api_gateway.tf  caller_identity.tf  cloudwatch_trigger.tf  dynamodb.tf  ec2.tf  ecr.tf  iam.tf  lambda.tf  lambda_layers.tf  locals.tf  main.tf  network.tf  outputs.tf  s3.tf  sg.tf  variables.tf
modules/athena/: athena.tf  glue.tf  outputs.tf  s3.tf  variables.tf
modules/docker_discord_bot/: Dockerfile  docker_deploy.tf
modules/docker_hevy_api_caller/: docker_deploy.tf
modules/fetch_all_workouts/: docker_deploy.tf  variable.tf
modules/lambda_ecr_images/: packer_docker_template.pkr.hcl
modules/lambdas/: data.tf  lambda.tf  lambda_layers.tf  outputs.tf  packer_docker_template.pkr.hcl  sns.tf  variables.tf
modules/network/: data.tf  ec2.tf  sg.tf  variables.tf
modules/src/: discord_bot.py  get-branch.sh  load_all_workouts.py  load_recent_workouts.py  print_latest_workout.py  test_lambda.py
modules/superset-user/: iam.tf  variables.tf
modules/superset_instance/: data.tf  dns.tf  ec2.tf  network.tf  sg.tf
side-scripts/: create_postgres_tables.py
side-scripts/describe_exercises/: enriched_exercises.csv  load_exercises.py
side-scripts/discord_bot/: bot_commands.py
side-scripts/infrastructure-diagram/: diagram.py
side-scripts/initiate-lance-db/: initiance-lance-db.py
side-scripts/otp/: otp.py
silka_agent/: agent.py  config.py  lance_db.py  sql_metadata.py  tools.py  workflow.py
(+53 files in other folders)
