[project]
name = "silka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.39.3",
    "certifi==2024.2.2",
    "cffi==1.17.1",
    "charset-normalizer==3.3.2",
    "distlib==0.3.8",
    "filelock==3.14.0",
    "idna==3.7",
    "langchain>=0.3.26",
    "langchain-aws>=0.2.27",
    "langchain-community>=0.3.27",
    "langgraph>=0.5.1",
    "langsmith>=0.4.4",
    "pandas>=2.3.0",
    "pipenv==2023.12.1",
    "platformdirs==4.2.1",
    "pyarrow>=20.0.0",
    "pybind11==2.10.4",
    "pycparser==2.22",
    "requests==2.31.0",
    "sentencepiece==0.2.0",
    "urllib3==2.2.1",
    "virtualenv==20.26.1",
]
