[project]
name = "silka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.39.3",
    "certifi==2024.2.2",
    "cffi==1.17.1",
    "charset-normalizer==3.3.2",
    "diagrams>=0.24.4",
    "distlib==0.3.8",
    "fastapi>=0.116.1",
    "filelock==3.14.0",
    "idna==3.7",
    "lancedb>=0.24.1",
    "langchain>=0.3.26",
    "langchain-aws>=0.2.27",
    "langchain-community>=0.3.27",
    "langgraph>=0.5.1",
    "langsmith>=0.4.4",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pipenv==2023.12.1",
    "platformdirs==4.2.1",
    "pyarrow>=20.0.0",
    "pybind11==2.10.4",
    "pycparser==2.22",
    "pynacl>=1.5.0",
    "pyotp>=2.9.0",
    "requests==2.31.0",
    "seaborn>=0.13.2",
    "sentencepiece==0.2.0",
    "urllib3==2.2.1",
    "uvicorn>=0.35.0",
    "virtualenv==20.26.1",
]
